# Progra2-Proyecto2

./: CMakeLists.txt  README.md
Program/: Analisis.cpp  Analisis.h  Proxy.cpp  Proxy.h  main.cpp
Program/Class/: Enfermedad.cpp  Enfermedad.h  Paciente.cpp  Paciente.h
Program/Menu/: Menu.cpp  Menu.h
Program/Structure/: Iterator.h  JsonBuilder.h  LinkedList.h  node.h
